# dopplerr

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pylintrc  .travis.yml  .yapf  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  bootstrap-system.sh  bootstrap.sh  build.sh  check-style.sh  config.json  dev.sh  fmtcode.sh  install.sh  proxy.py  refresh_readme.sh  requirements-dev.txt  requirements.txt  setup-pip.sh  setup.cfg  setup.py  test-docker.sh  test-local.sh  test.sh  tox.ini  travis_pypi_setup.py
assets/: dopplerr-square.psd
cfgtree/: README.rst  __init__.py  cfgtree.py  dictxpath.py  storages.py  types.py
cfgtree/tests/: test_dictxparth.py  test_dictxparth.py.disabled
dockerfs/etc/services.d/dopplerr/: run
dopplerr/: __init__.py  cfg.py  cfgtree.py  config.py  db.py  dictxpath.py  dopplerr.py  downloader.py  environment_config.py  executors.py  json.py  logging.py  logging_split.py  main.py  main_pyannotate.py  notifications.py  recursive_iglob.py  request_filter.py  response.py  routes.py  singleton.py  status.py  txutils.py
dopplerr/api/: add_route.py  v1.py
dopplerr/api/v1/: __init__.py  config.py  events.py  medias.py  notify.py  other.py  series.py  status.py
dopplerr/common/: singleton.py
dopplerr/descriptors/: media_types.py  series.py
dopplerr/notifications/: __init__.py  _base.py  pushover.py
dopplerr/notifications_types/: _base.py  series_media_refreshed.py  series_subtitles_fetched.py
dopplerr/plugins/sonarr/: filter.py  response.py  task.py  task_on_download.py
dopplerr/tasks/: base.py  disk_scanner.py  download_subtitles.py  executors.py  maintainance.py  manager.py  periodic.py  periodic_task_manager.py  queued.py  sonarr.py  sonarr_on_download.py  subliminal.py  task_manager.py  threaded.py
dopplerr/tasks/subtasks/: subliminal.py
dopplerr/tasks/tests/: test_aps.py  test_download_subtitles.py  test_executors.py  test_queued.py
dopplerr/tests/: test_cfgtree.py  test_dopplerr.py
dopplerr/tests/vectors/: radarr_on_grab-info.json  radarr_on_grab.json  sonarr_on_download-info.json  sonarr_on_download.json  sonarr_on_download2-info.json  sonarr_on_download2.json  sonarr_on_download_rename-info.json  sonarr_on_download_rename.json  sonarr_on_grab-info.json  sonarr_on_grab.json
frontend/: .eslintrc.js  Makefile  README.md  index.html  package-lock.json  package.json
frontend/config/: index.js
frontend/src/: index.html  main.js  router.js
frontend/src/assets/: hubblecast43f-thin.psd
frontend/src/components/: Hello.vue  events.vue  home.vue  pages.vue
frontend/src/components/pages/: about.vue  events.vue  home.vue  logs.vue  movies.vue  series.vue  status.vue
frontend/src/themes/: app.variables.styl
frontend/templates/: layout.vue
root/etc/cont-init.d/: 30-install
root/etc/services.d/dopplerr/: run
root/etc/services.d/subdlsrv/: run
subdlsrv/: downloader.py  logging.py  subdlsrv.py  txutils.py  utils.py
subdlsrv/tests/: test_sonarr-sub-downloader-docker.py  test_subdlsrv.py
