[metadata]
name = subdlsrv
summary = Subtitle Download Web Service for Sonarr
description-file =
    README.md
author = Gaetan Semet
author-email = gaetan@xeberon.net
home-page = https://github.com/Stibbons/sonarr-sub-downloader-docker
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    subdlsrv

[entry_points]
console_scripts =
    subdlsrv = subdlsrv.subdlsrv:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[flake8]
ignore = E226,E302,E41
max-line-length = 100
exclude = env
max-complexity = 25

[pep8]
max-line-length = 100

[yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = pep8
blank_line_before_nested_class_or_def = true
column_limit = 100
dedent_closing_brackets = false
spaces_around_power_operator = false
spaces_before_comment = 2
split_before_first_argument = false
split_before_logical_operator = true
split_arguments_when_comma_terminated = true
