[metadata]
name = subdlsrv
summary = Subtitle Download Web Service for Sonarr
description-file = README.rst
author = Gaetan Semet
author-email = gaetan@xeberon.net
home-page = https://github.com/Stibbons/subdlsrv
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Multimedia :: Video

[files]
packages =
    subdlsrv

[entry_points]
console_scripts =
    subdlsrv = subdlsrv.subdlsrv:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[flake8]
ignore = E226,E302,E41
max-line-length = 100
exclude = env
max-complexity = 25

[pep8]
max-line-length = 100

[yapf]
based_on_style = pep8
column_limit = 100
indent_dictionary_value = true
split_before_first_argument= false
split_penalty_after_opening_bracket = 10
; align_closing_bracket_with_visual_indent = true
; blank_line_before_nested_class_or_def = true
; dedent_closing_brackets = false
; spaces_around_power_operator = false
; spaces_before_comment = 2
; split_before_first_argument = false
; split_before_logical_operator = false
; split_arguments_when_comma_terminated = true

[pylint]
output-format = colorized
ignore-docstrings = yes
disable =
    missing-docstring,
    invalid-name,
    no-self-use,
    broad-except,
    global-statement,
    ungrouped-imports,
    unexpected-keyword-arg,  ; for pylint to be happy with glob arguments on py < 3.5
max-args=9
max-attributes=11


[isort]
line_length = 100
known_future_library = future
known_standard_library = pathlib2,glob2
known_twisted =
    twisted,
    klein
known_mock = mock
known_third_party =
    coverage,
    setuptools,
    flask
known_first_party = subdlsrv
force_single_line = 1
sections =
    FUTURE,
    FUTURE_LIBRARY,
    STDLIB,
    THIRDPARTY,
    MOCK,
    TWISTED,
    FIRSTPARTY,
    LOCALFOLDER
add_imports =
    from __future__ import absolute_import,
    from __future__ import division,
    from __future__ import print_function,
    from __future__ import unicode_literals,
min-similarity-lines=5
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=yes
